# clinical-trial-matching-medgemma

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Clinical Trials API Integration.md  README.md  medpix-benchmark.skill  pyproject.toml  requirements.txt  vertex-ai-deploy.skill
.claude/: settings.local.json
.playwright-cli/: page-2026-02-21T21-46-49-420Z.yml  page-2026-02-21T21-46-52-935Z.yml  page-2026-02-21T21-47-04-231Z.yml  page-2026-02-21T21-47-07-020Z.yml  page-2026-02-21T21-48-50-568Z.yml  page-2026-02-21T21-49-36-796Z.yml  page-2026-02-21T21-49-51-090Z.yml  page-2026-02-21T21-50-30-059Z.yml  page-2026-02-21T21-51-08-407Z.yml  page-2026-02-21T21-51-45-642Z.yml  page-2026-02-21T21-52-31-834Z.yml  page-2026-02-21T21-53-47-662Z.yml  page-2026-02-21T21-54-04-911Z.yml  page-2026-02-21T21-54-15-691Z.yml  page-2026-02-21T22-23-49-503Z.yml  page-2026-02-21T22-24-24-568Z.yml  page-2026-02-21T22-25-10-168Z.yml  page-2026-02-21T22-25-37-606Z.yml  page-2026-02-21T22-26-58-238Z.yml  page-2026-02-21T22-52-41-957Z.yml  page-2026-02-21T22-53-29-375Z.yml  page-2026-02-21T22-57-07-699Z.yml  page-2026-02-21T22-57-36-572Z.yml  page-2026-02-21T22-58-10-852Z.yml  page-2026-02-21T22-58-22-848Z.yml  page-2026-02-21T22-58-32-528Z.yml  page-2026-02-21T22-58-52-919Z.yml  page-2026-02-21T22-59-13-108Z.yml  page-2026-02-21T22-59-45-192Z.yml  page-2026-02-21T23-00-29-479Z.yml  page-2026-02-21T23-55-22-176Z.yml  page-2026-02-21T23-56-03-797Z.yml  page-2026-02-21T23-57-14-256Z.yml  page-2026-02-21T23-57-40-397Z.yml  page-2026-02-21T23-59-21-152Z.yml  page-2026-02-21T23-59-42-500Z.yml  (+72 more)
(+471 files in other folders)
