[project]
name = "trialmatch"
version = "0.1.0"
description = "MedGemma vs Gemini 3 Pro: Clinical trial criterion matching benchmark"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "scikit-learn>=1.3",
    "datasets>=2.0",
    "httpx>=0.25",
    "structlog>=23.1",
    "pyyaml>=6.0",
    "google-genai>=1.0",
    "huggingface-hub>=0.20",
]

[project.scripts]
trialmatch = "trialmatch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trialmatch"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks end-to-end tests (deselect with '-m \"not e2e\"')",
    "bdd: marks BDD tests",
    "component_validate: validate module BDD tests",
    "component_data: data module BDD tests",
]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-bdd>=7.0",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.2",
    "vcrpy>=6.0",
    "ruff>=0.4",
]
